syntax = "proto3";

option csharp_namespace = "Orleans.Grpc.Shared.Services.Protos";

package KeyValueStore;


service KeyValueStoreService {
  // Sends a greeting
  rpc AddColumn (AddColumnRequest) returns (AddColumnReply);
}

// The request message containing the user's name.
message AddColumnRequest {
  bytes UUID = 1;
  ColumnDefinition Definition = 2;
  
}
message ColumnDefinition {
  string ColumnName = 2;
}
// The response message containing the greetings.
message AddColumnReply {
}
